# cs_tournament_web

./: .dockerignore  .env.example  .pre-commit-config.yaml  Caddyfile  Dockerfile  __entrypoint.sh  _docker-compose.yaml  docker-cmd.sh  docker-compose.yaml  docker-entrypoint.sh  entrypoint.sh  pyproject.toml  requirements.txt
api/v1/: filters.py  serializers.py  urls.py  views.py
core/: admin.py  consts.py  factories.py  models.py  services.py
core/fixtures/: auth.json
core/migrations/: 0001_initial.py
league/: admin.py  apps.py  factories.py  models.py  services.py  signals.py  tasks.py
league/migrations/: 0001_initial.py
nginx/: Dockerfile  nginx.conf
project/: __init__.py  local_settings.example.py  settings.py  urls.py
tests/: conftest.py  fixtures.py
