[project]
name = "cs-tournament"
version = "0.1.0"
description = ""
authors = [
    { name = "Ilgiz Rakhimianov", email = "i@rakhimianov.ru" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-filter (>=25.1,<26.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "django-redis (>=6.0.0,<7.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "drf-standardized-errors (>=0.15.0,<0.16.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "ipython (>=9.4.0,<10.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "requests (>=2.32.4,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
setuptools = "^80.9.0"
ruff = "^0.12.8"
pre-commit = "^4.3.0"
django-extensions = "^4.1"
django-silk = "^5.4.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-django = "^4.11.1"
pytest-factoryboy = "^2.8.1"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.1"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"
python_files = "test_*.py"
filterwarnings = "ignore::DeprecationWarning"


[tool.coverage.report]
omit = ["*/__init__.py", "*/migrations/*", "project/*", "tests/*"]


[tool.ruff]
extend-exclude = ["*/migrations/*", "*settings.py"]
line-length = 120


[tool.ruff.lint]
select = ["E", "F"]
ignore = [
    "F401", # Module imported but unused
]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "E402", # Module level import not at top of file
    "F403", # 'from module import *' used; unable to detect undefined names (F403)
]


[tool.ruff.format]
quote-style = "single"